<resources>
    <string name="app_name">LayoutDesignApp</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="hello">Hello</string>
    <string name="title_activity_maps">Map</string>
</resources>