<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".RelativeLayoutActivity">

    <TextView
        android:id="@+id/tv_login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login_text"
        android:layout_marginTop="20dp"
        android:text="@string/username"
        android:textColor="@color/colorBlack"
        android:textSize="16sp">

    </TextView>

    <EditText
        android:id="@+id/edt_relative_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_username"
        android:background="@drawable/bg_edit_text"
        android:layout_marginTop="5dp"
        android:hint="Enter Username">

    </EditText>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_relative_username"
        android:layout_marginTop="20dp"
        android:text="Password"
        android:textColor="@color/colorBlack"
        android:textSize="16sp">

    </TextView>

    <EditText
        android:id="@+id/edt_relative_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_password"
        android:hint="Enter Password">

    </EditText>

    <Button
        android:id="@+id/btn_relative_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_relative_password"
        android:layout_marginTop="22dp"
        android:layout_centerInParent="true"
        android:textColor="@color/colorWhite"
        android:background="@drawable/bg_button"
        android:text="Login">

    </Button>

    <TextView
        android:id="@+id/tv_info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_relative_login"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/don_t_have_an_account">

    </TextView>

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_relative_login"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/tv_info_text"
        android:text="@string/sign_up"
        android:textColor="@color/colorOrange"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/tv_relative_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_info_text"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="Forgot Password"
        android:textColor="@color/colorBlack">

    </TextView>

</RelativeLayout>